force-app/main/default/objects/Pesquisa_de_Satisfacao__c/Pesquisa_de_Satisfacao__c.object-meta.xml
<CustomObject>
    <label>Pesquisa de Satisfação</label>
    <nameField>
        <displayFormat>PS - {000000000}</displayFormat>
        <label>Nome de Pesquisa de Satisfação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pesquisas de Satisfação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>