force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pesquisas de Satisfação</relationshipLabel>
    <relationshipName>Pesquisas_de_Satisfacao</relationshipName>
    <type>Lookup</type>
</CustomField>