force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <description>Comentários da avaliação da pesquisa de satisfação.</description>
    <label>Comentário</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>