force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pesquisas de Satisfação</relationshipLabel>
    <relationshipName>Pesquisas_de_Satisfacao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>