force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/O_seu_problema_foi_resolvido__c.field-meta.xml
<CustomField>
    <fullName>O_seu_problema_foi_resolvido__c</fullName>
    <label>O seu problema foi resolvido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>