force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Qual_a_nota_para_este_atendimento__c.field-meta.xml
<CustomField>
    <fullName>Qual_a_nota_para_este_atendimento__c</fullName>
    <inlineHelpText>Numa escala de 1 a 5, sendo 1 Muito Insatisfeito e 5 Totalmente Satisfeito. Qual a nota para este atendimento?</inlineHelpText>
    <label>Qual a nota para este atendimento?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>