force-app/main/default/objects/Pesquisa_de_Satisfacao__c/fields/Respondida__c.field-meta.xml
<CustomField>
    <fullName>Respondida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respondida</label>
    <type>Checkbox</type>
</CustomField>