force-app/main/default/objects/Pesquisa_de_Satisfacao__c/validationRules/NotaAtendimento.validationRule-meta.xml
<ValidationRule>
    <fullName>NotaAtendimento</fullName>
    <active>true</active>
    <errorConditionFormula>Qual_a_nota_para_este_atendimento__c &gt; 5</errorConditionFormula>
    <errorMessage>A nota deve ser entre 1 e 5</errorMessage>
</ValidationRule>